--- a/NLP_Hotel_Reviews.ipynb
+++ b/NLP_Hotel_Reviews.ipynb
@@ -592,6 +592,133 @@
     {
       "cell_type": "markdown",
       "source": [
+        "**Funções Auxiliares**"
+      ],
+      "metadata": {
+        "id": "zZkcDU3e_8QG"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import warnings\n",
+        "warnings.filterwarnings('ignore')\n",
+        "\n",
+        "import pandas as pd\n",
+        "from wordcloud import WordCloud\n",
+        "import seaborn as sns\n",
+        "import re\n",
+        "import string\n",
+        "from collections import Counter, defaultdict\n",
+        "\n",
+        "from sklearn.feature_extraction.text import CountVectorizer, TfidfVectorizer\n",
+        "\n",
+        "import plotly.express as px\n",
+        "from plotly.subplots import make_subplots\n",
+        "import plotly.graph_objects as go\n",
+        "from plotly.offline import plot\n",
+        "\n",
+        "import matplotlib.gridspec as gridspec\n",
+        "from matplotlib.ticker import MaxNLocator\n",
+        "import matplotlib.patches as mpatches\n",
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "import nltk\n",
+        "nltk.download('stopwords')\n",
+        "from nltk.corpus import stopwords\n",
+        "stopWords_nltk = set(stopwords.words('english'))"
+      ],
+      "metadata": {
+        "id": "HWXDFvGZAK-s",
+        "outputId": "2e854ad4-9381-42f9-c58d-c311c45859d8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
+            "[nltk_data]   Unzipping corpora/stopwords.zip.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import re\n",
+        "from typing import Union, List\n",
+        "\n",
+        "class CleanText():\n",
+        "    \"\"\" clearing text except digits () . , word character \"\"\"\n",
+        "\n",
+        "    def __init__(self, clean_pattern = r\"[^A-ZĞÜŞİÖÇIa-zğüı'şöç0-9.\\\"',()]\"):\n",
+        "        self.clean_pattern =clean_pattern\n",
+        "\n",
+        "    def __call__(self, text: Union[str, list]) -> List[List[str]]:\n",
+        "\n",
+        "        if isinstance(text, str):\n",
+        "            docs = [[text]]\n",
+        "\n",
+        "        if isinstance(text, list):\n",
+        "            docs = text\n",
+        "\n",
+        "        text = [[re.sub(self.clean_pattern, \" \", sent) for sent in sents] for sents in docs]\n",
+        "\n",
+        "        return text\n",
+        "\n",
+        "def remove_emoji(data):\n",
+        "    emoj = re.compile(\"[\"\n",
+        "        u\"\\U0001F600-\\U0001F64F\"  # emoticons\n",
+        "        u\"\\U0001F300-\\U0001F5FF\"  # symbols & pictographs\n",
+        "        u\"\\U0001F680-\\U0001F6FF\"  # transport & map symbols\n",
+        "        u\"\\U0001F1E0-\\U0001F1FF\"  # flags (iOS)\n",
+        "        u\"\\U00002500-\\U00002BEF\"\n",
+        "        u\"\\U00002702-\\U000027B0\"\n",
+        "        u\"\\U00002702-\\U000027B0\"\n",
+        "        u\"\\U000024C2-\\U0001F251\"\n",
+        "        u\"\\U0001f926-\\U0001f937\"\n",
+        "        u\"\\U00010000-\\U0010ffff\"\n",
+        "        u\"\\u2640-\\u2642\"\n",
+        "        u\"\\u2600-\\u2B55\"\n",
+        "        u\"\\u200d\"\n",
+        "        u\"\\u23cf\"\n",
+        "        u\"\\u23e9\"\n",
+        "        u\"\\u231a\"\n",
+        "        u\"\\ufe0f\"  # dingbats\n",
+        "        u\"\\u3030\"\n",
+        "                      \"]+\", re.UNICODE)\n",
+        "    return re.sub(emoj, '', data)\n",
+        "\n",
+        "def tokenize(text):\n",
+        "    \"\"\" basic tokenize method with word character, non word character and digits \"\"\"\n",
+        "    text = re.sub(r\" +\", \" \", str(text))\n",
+        "    text = re.split(r\"(\\d+|[a-zA-ZğüşıöçĞÜŞİÖÇ]+|\\W)\", text)\n",
+        "    text = list(filter(lambda x: x != '' and x != ' ', text))\n",
+        "    sent_tokenized = ' '.join(text)\n",
+        "    return sent_tokenized\n",
+        "\n",
+        "regex = re.compile('[%s]' % re.escape(string.punctuation))\n",
+        "\n",
+        "def remove_punct(text):\n",
+        "    text = regex.sub(\" \", text)\n",
+        "    return text\n",
+        "\n",
+        "clean = CleanText()"
+      ],
+      "metadata": {
+        "id": "EcerbM-G_9MU"
+      },
+      "execution_count": 25,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "## 3.Carga do Dataset"
       ],
       "metadata": {
@@ -1562,6 +1689,18 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# clean text, lowercase and remove punk\n",
+        "dataset_2[\"review\"] = dataset_2[\"review\"].apply(lambda x: remove_punct(clean(remove_emoji(x).lower())[0][0]))"
+      ],
+      "metadata": {
+        "id": "NTLBOJj9A6c-"
+      },
+      "execution_count": 29,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "No dataset escolhido quando o usuário opta por não preencher o atributo \"Negative_Review\" ou \"Positive_Review\", automaticamente o dataset é preenchido com \"No Negative\" ou \"No positive\", o que não irá ajudar no treinamento do modelo, podendo até atrapalhar no desempenho do mesmo."
@@ -1576,37 +1715,37 @@
         "dataset_2.head()"
       ],
       "metadata": {
-        "id": "QO9n-P8M-dWZ",
-        "outputId": "0e21debf-9b9a-4bec-97b9-f90405564c1d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "id": "QO9n-P8M-dWZ",
+        "outputId": "af96efca-851d-4be8-97de-722e100943a2"
       },
-      "execution_count": 21,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
               "                                              review  review_classification  \\\n",
-              "0   I am so angry that i made this post available...                      0   \n",
-              "1  No Negative No real complaints the hotel was g...                      3   \n",
-              "2   Rooms are nice but for elderly a bit difficul...                      3   \n",
-              "3   My room was dirty and I was afraid to walk ba...                      1   \n",
-              "4   You When I booked with your company on line y...                      3   \n",
+              "0   i am so angry that i made this post available...                      0   \n",
+              "1   no real complaints the hotel was great great ...                      3   \n",
+              "2   rooms are nice but for elderly a bit difficul...                      3   \n",
+              "3   my room was dirty and i was afraid to walk ba...                      1   \n",
+              "4   you when i booked with your company on line y...                      3   \n",
               "\n",
-              "       label_name  \n",
-              "0  Muito Negativo  \n",
-              "1        Positivo  \n",
-              "2        Positivo  \n",
-              "3        Negativo  \n",
-              "4        Positivo  "
+              "       label_name                                             Review  \n",
+              "0  Muito Negativo   i am so angry that i made this post available...  \n",
+              "1        Positivo   no real complaints the hotel was great great ...  \n",
+              "2        Positivo   rooms are nice but for elderly a bit difficul...  \n",
+              "3        Negativo   my room was dirty and i was afraid to walk ba...  \n",
+              "4        Positivo   you when i booked with your company on line y...  "
             ],
             "text/html": [
               "\n",
               "\n",
-              "  <div id=\"df-43aa3e4e-7781-4284-a5db-22d7ea458b3c\">\n",
+              "  <div id=\"df-db2b8f64-a902-4037-8dcd-5205cf6efa34\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1629,43 +1768,49 @@
               "      <th>review</th>\n",
               "      <th>review_classification</th>\n",
               "      <th>label_name</th>\n",
+              "      <th>Review</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>I am so angry that i made this post available...</td>\n",
+              "      <td>i am so angry that i made this post available...</td>\n",
               "      <td>0</td>\n",
               "      <td>Muito Negativo</td>\n",
+              "      <td>i am so angry that i made this post available...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>No Negative No real complaints the hotel was g...</td>\n",
+              "      <td>no real complaints the hotel was great great ...</td>\n",
               "      <td>3</td>\n",
               "      <td>Positivo</td>\n",
+              "      <td>no real complaints the hotel was great great ...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>Rooms are nice but for elderly a bit difficul...</td>\n",
+              "      <td>rooms are nice but for elderly a bit difficul...</td>\n",
               "      <td>3</td>\n",
               "      <td>Positivo</td>\n",
+              "      <td>rooms are nice but for elderly a bit difficul...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
-              "      <td>My room was dirty and I was afraid to walk ba...</td>\n",
+              "      <td>my room was dirty and i was afraid to walk ba...</td>\n",
               "      <td>1</td>\n",
               "      <td>Negativo</td>\n",
+              "      <td>my room was dirty and i was afraid to walk ba...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
-              "      <td>You When I booked with your company on line y...</td>\n",
+              "      <td>you when i booked with your company on line y...</td>\n",
               "      <td>3</td>\n",
               "      <td>Positivo</td>\n",
+              "      <td>you when i booked with your company on line y...</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-43aa3e4e-7781-4284-a5db-22d7ea458b3c')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-db2b8f64-a902-4037-8dcd-5205cf6efa34')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "\n",
@@ -1678,8 +1823,8 @@
               "\n",
               "\n",
               "\n",
-              "    <div id=\"df-5b2a62dd-ee73-49e5-bff3-e15dea177fc0\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-5b2a62dd-ee73-49e5-bff3-e15dea177fc0')\"\n",
+              "    <div id=\"df-fe865735-433b-43e2-b203-93ecc89d85e7\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-fe865735-433b-43e2-b203-93ecc89d85e7')\"\n",
               "              title=\"Suggest charts.\"\n",
               "              style=\"display:none;\">\n",
               "\n",
@@ -1736,7 +1881,7 @@
               "\n",
               "function displayQuickchartButton(domScope) {\n",
               "  let quickchartButtonEl =\n",
-              "    domScope.querySelector('#df-5b2a62dd-ee73-49e5-bff3-e15dea177fc0 button.colab-df-quickchart');\n",
+              "    domScope.querySelector('#df-fe865735-433b-43e2-b203-93ecc89d85e7 button.colab-df-quickchart');\n",
               "  quickchartButtonEl.style.display =\n",
               "    google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "}\n",
@@ -1783,12 +1928,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-43aa3e4e-7781-4284-a5db-22d7ea458b3c button.colab-df-convert');\n",
+              "          document.querySelector('#df-db2b8f64-a902-4037-8dcd-5205cf6efa34 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-43aa3e4e-7781-4284-a5db-22d7ea458b3c');\n",
+              "          const element = document.querySelector('#df-db2b8f64-a902-4037-8dcd-5205cf6efa34');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1810,7 +1955,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 30
         }
       ]
     },
@@ -1954,12 +2099,12 @@
         "show_wordcloud(dataset_2[\"review\"].values)"
       ],
       "metadata": {
-        "id": "eGOFVSoO6pHe",
-        "outputId": "e48932db-e2bf-4e99-c66e-570b3655e0a7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 618
-        }
+        },
+        "id": "eGOFVSoO6pHe",
+        "outputId": "e48932db-e2bf-4e99-c66e-570b3655e0a7"
       },
       "execution_count": 19,
       "outputs": [
